--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "word-ladder-react",
   "version": "0.1.0",
-  "homepage": "https://jordnkr.github.io/word-ladder-react",
+  "homepage": "https://jordnkr.github.io/WordLadder",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
