--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "word-ladder-react",
+  "name": "word-ladder",
   "version": "0.1.0",
   "homepage": "https://jordnkr.github.io/WordLadder",
   "private": true,
